Network Policies/allow_all_tradffic_to_an_application_from_all_namespaces.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  # Name of the rule
  name: web-allow-all
  # Namespace where the rule will be applied
  namespace: default
spec:
  # Selects the pods for which the rule will be applied ( in this case application with the label app:web) 
  podSelector:
    matchLabels:
      app: web
  ingress:
  # Allow ingress traffic from all pods of all namespaces
  - from:
    - podSelector: {}
      namespaceSelector: {}
